--- a/index.html
+++ b/index.html
@@ -18,7 +18,39 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <a href="./index.html" class="logo">
+          <img src="./images/icons/logo.svg" alt="logo" class="logo__icon" />
+        </a>
+        <h1 class="header__title">FIND BEST EVENTS AROUND THE WORLD</h1>
+        <div class="header-search">
+          <div class="header-search-event-container">
+            <input
+              type="text"
+              class="header-search__input header-search__input--event"
+              placeholder="Start searching"
+            />
+          </div>
+          <div class="header-search-choose-container">
+            <input
+              type="text"
+              class="header-search__input header-search__input--choose-country"
+              placeholder="Choose country"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main"></main>
+  </body>
 </html>
