add footer mobile-first

--- a/index.html
+++ b/index.html
@@ -52,5 +52,12 @@
       </div>
     </header>
     <main class="main"></main>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer__text">
+          © 2021 | All Rights Reserved | Developed with ♥ by GoIT Students
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
