--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="./js/modal.js" type="module"></script>
-    <script src="./js/search.js" type="module"></script>
-    <script src="./js/slider.js" type="module"></script>
+    <script src="./js/pagination.js" type="module"></script>
   </body>
 </html>
